# CDK_EVENTBRIDGE_TAGGING

./: README.md  app.py  pyproject.toml
cdk.out/: LambdaSnsStack.assets.json  LambdaSnsStack.template.json  manifest.json  tree.json
cdk.out/asset.2da4d81b19b7f2b8ee3fd36273a7edf7750c760d1b976625b72d9d27de8f669a/: lambda_function.py
lambda_code/: lambda_function.py
lambda_sns/: lambda_sns_stack.py
tests/unit/: test_lambda_sns_stack.py
